README for players: getting the launcher, the window, updates, Options, files, what to do when it fails
The build, publish and internals notes leave it: build.xml, publish.ps1, publish-steam.ps1 and the workflow
document themselves, and the code its own behaviour. No forks are expected.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>